Implement Sprint 2 backend: add lesson-based architecture, question-lesson relationship, lesson APIs, and PostgreSQL support with environment profiles